{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 37,
  "lineage": "316f047b-46cc-e4d4-4af2-28603d272f97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075cd90087c4d03ce",
            "arn": "arn:aws:ec2:us-east-2:050002895805:elastic-ip/eipalloc-075cd90087c4d03ce",
            "association_id": "eipassoc-07a671e33661d4bc8",
            "domain": "vpc",
            "id": "eipalloc-075cd90087c4d03ce",
            "network_border_group": "us-east-2",
            "network_interface": "eni-065f78db13e0db14e",
            "private_dns": "ip-10-0-1-173.us-east-2.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-18-227-64-0.us-east-2.compute.amazonaws.com",
            "public_ip": "18.227.64.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devsecops-nat-eip"
            },
            "tags_all": {
              "Name": "devsecops-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:internet-gateway/igw-07df113e51720fb1e",
            "id": "igw-07df113e51720fb1e",
            "owner_id": "050002895805",
            "tags": {
              "Name": "devsecops-igw"
            },
            "tags_all": {
              "Name": "devsecops-igw"
            },
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075cd90087c4d03ce",
            "association_id": "eipassoc-07a671e33661d4bc8",
            "connectivity_type": "public",
            "id": "nat-098c17ad07b5c12a3",
            "network_interface_id": "eni-065f78db13e0db14e",
            "private_ip": "10.0.1.173",
            "public_ip": "18.227.64.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-019492bea40f549b5",
            "tags": {
              "Name": "devsecops-nat"
            },
            "tags_all": {
              "Name": "devsecops-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:route-table/rtb-0352d4fef2b07cc12",
            "id": "rtb-0352d4fef2b07cc12",
            "owner_id": "050002895805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-098c17ad07b5c12a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-private-rt"
            },
            "tags_all": {
              "Name": "devsecops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:route-table/rtb-0f255a78da30a4ddd",
            "id": "rtb-0f255a78da30a4ddd",
            "owner_id": "050002895805",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07df113e51720fb1e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devsecops-public-rt"
            },
            "tags_all": {
              "Name": "devsecops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0137da68d0cdf7cc6",
            "route_table_id": "rtb-0352d4fef2b07cc12",
            "subnet_id": "subnet-0eb879b17354a052b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8dfa0ef287621b4",
            "route_table_id": "rtb-0352d4fef2b07cc12",
            "subnet_id": "subnet-01ab166c8db2d2597"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f303f3c68b05802",
            "route_table_id": "rtb-0f255a78da30a4ddd",
            "subnet_id": "subnet-019492bea40f549b5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f917368b8eab145",
            "route_table_id": "rtb-0f255a78da30a4ddd",
            "subnet_id": "subnet-09b9c5d84555d493c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:subnet/subnet-0eb879b17354a052b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb879b17354a052b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050002895805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:subnet/subnet-01ab166c8db2d2597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ab166c8db2d2597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050002895805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:subnet/subnet-019492bea40f549b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019492bea40f549b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050002895805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:subnet/subnet-09b9c5d84555d493c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b9c5d84555d493c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050002895805",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devsecops-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devsecops-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00d1c7a0f061291ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:050002895805:vpc/vpc-00d1c7a0f061291ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019e118d50271ddf9",
            "default_route_table_id": "rtb-0546eb5722fbeeb7f",
            "default_security_group_id": "sg-0110b8614ebfcb7f8",
            "dhcp_options_id": "dopt-02c71e3c51be9b069",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d1c7a0f061291ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0546eb5722fbeeb7f",
            "owner_id": "050002895805",
            "tags": {
              "Name": "devsecops-vpc"
            },
            "tags_all": {
              "Name": "devsecops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}